<resources>
    <string name="app_name">SevenAteNine</string>
    <string name="action_connect">Connect</string>
    <string name="action_google_auth">Google Auth</string>
    <string name="action_get_card">Get card</string>
    <string name="action_to_lobby_list">to lobby list</string>
    <string name="hint_login_name">Name</string>
    <string name="title_winner">Winner is</string>
    <string name="title_score_board">ScoreBoard</string>
    <string name="title_enter_lobby_name">Enter lobby name:</string>
    <string name="title_max_players_number">Max number of players:</string>
    <string name="action_create_lobby">Create</string>
    <string name="title_wait_request">Wait, please.</string>
    <string name="title_players_in_lobby">Players:</string>
    <string name="action_leave_lobby">Leave lobby</string>
    <string name="title_cards_left">Card left:</string>
    <string name="action_leave_game">Leave</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="action_log_in">Log in</string>
    <string name="action_exit">Exit</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="msg_no_lobbies">There is no lobby</string>
    <string name="valued_local_ip">192.168.0.1</string>
    <string name="action_apply">apply</string>
    <string name="action_cancel">Cancel</string>
    <string name="key_is_music_enabled">key_music_on</string>
    <string name="key_are_game_sounds_enabled">key_are_game_sounds_enabled</string>
    <string name="key_is_effects_on">key_effects_on</string>
    <string name="key_background_picture">key_background_picture</string>
    <string name="key_server_ip">key_ip</string>
    <string name="key_server_port">key_port</string>
    <string name="default_server_ip">192.168.0.0</string>
    <string name="default_server_port">39405</string>
    <string name="title_rating">Rating:</string>
</resources>
