<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <com.yatty.sevenatenine.client.custom_preferences.CustomPreferenceCategory
        android:title="Volume settings">
        <com.yatty.sevenatenine.client.custom_preferences.CustomSwitchPreference
            android:defaultValue="true"
            android:key="@string/key_is_music_enabled"
            android:summary="Enable background music"
            android:title="Music"/>

        <com.yatty.sevenatenine.client.custom_preferences.CustomSwitchPreference
            android:defaultValue="true"
            android:key="@string/key_are_game_sounds_enabled"
            android:summary="Enable game sounds"
            android:title="Game sounds"/>
    </com.yatty.sevenatenine.client.custom_preferences.CustomPreferenceCategory>

    <com.yatty.sevenatenine.client.custom_preferences.CustomPreferenceCategory
        android:title="Visual settings">
        <com.yatty.sevenatenine.client.custom_preferences.CustomListPreference
            android:defaultValue="cards1"
            android:dialogTitle="Choose background picture"
            android:entries="@array/background_pictures"
            android:entryValues="@array/values_background_pictures"
            android:key="@string/key_background_picture"
            android:summary="Tap to choose background picture"
            android:title="Background image"
            />
    </com.yatty.sevenatenine.client.custom_preferences.CustomPreferenceCategory>


    <com.yatty.sevenatenine.client.custom_preferences.CustomPreferenceCategory
        android:title="Network settings">
        <com.yatty.sevenatenine.client.custom_preferences.CustomEditTextPreference
            android:defaultValue="@string/default_server_ip"
            android:key="@string/key_server_ip"
            android:summary="Server IP address"
            android:title="Server IP"
            />
        <com.yatty.sevenatenine.client.custom_preferences.CustomEditTextPreference
            android:defaultValue="@string/default_server_port"
            android:key="@string/key_server_port"
            android:summary="Server port number"
            android:title="Server port"
            />
    </com.yatty.sevenatenine.client.custom_preferences.CustomPreferenceCategory>

</PreferenceScreen>